fixed spacing in about me, header/nav and contact me sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,7 @@
-* {
-    box-sizing: border-box;
-}
+* { box-sizing: border-box; }
 
 /*color palette*/
+
 :root {
     --primary: rgb(222, 182, 182);
     --secondary: rgb(160, 183, 197);
@@ -20,13 +19,11 @@ body{
     line-height: 1.5;
 }
 
-h2 {
-    font-size: 45px;
-}
+h2 { font-size: 45px; }
 
-p {
-    margin: 0
-}
+p { margin: 0 }
+
+/* header section */
 
 header {
     padding: 15px 6% 15px 0;
@@ -74,9 +71,7 @@ nav a:hover {
     color: var(--primary);
 }
 
-nav a: last-child{
-    margin-right: 0px;
-}
+nav a:last-child { margin-right: 0px; }
 
 span {
     border-bottom: 3px solid;
@@ -87,6 +82,8 @@ main {
     margin-top: 20px;
     margin-bottom: 45px;
 }
+
+/* hero section */
 
 .hero-banner{
     background-image: url("../images/skyline.jpeg");
@@ -102,9 +99,7 @@ main {
     text-align: right;
 }
 
-.hero-banner div {
-flex: 0 0 90%;
-}
+.hero-banner div { flex: 0 0 90%; }
 
 .hero-banner h2 {
     background-color: var(--secondary);
@@ -114,16 +109,6 @@ flex: 0 0 90%;
     font-size: 2.3rem;
     line-height: 1.2;
     display: inline;
-}
-
-.image-flex {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.image-flex > img {
-    margin: 20px;
 }
 
 .page-wrapper {
@@ -140,7 +125,6 @@ flex: 0 0 90%;
     flex-wrap: wrap;
     align-items: stretch;
     justify-content: space-between;
-
 }
 
 .page-section > h2 {
@@ -162,6 +146,18 @@ flex: 0 0 70%;
 .page-section img {
     width: 15%;
 }
+
+/* bio image */
+
+.image-flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.image-flex > img { margin: 20px; }
+
+/* portfolio grid section */
 
 .grid-container {
     display: grid;
@@ -195,9 +191,7 @@ flex: 0 0 70%;
     grid-row: span 2;
 }
 
-.grid-item:hover {
-    background-color: rgba(0, 0, 0, 0.3);
-}
+.grid-item:hover { background-color: rgba(0, 0, 0, 0.3); }
 
 .grid-item div{
     background-color: var(--secondary);
@@ -205,12 +199,9 @@ flex: 0 0 70%;
     padding: 0 8px 15px 5px;
     line-height: .2;
     display: inline;
-
 }
 
-.grid-item h3 {
-
-}
+/*contact section */
 
 .contact address {
     display: flex;
@@ -226,42 +217,46 @@ flex: 0 0 70%;
     border-bottom: 3px solid;
 }
 
-.contact address a:hover {
-    color: var(--primary);
-}
+.contact address a:hover { color: var(--primary); }
 
 /* start portfolio project images */
 
-.run-buddy {
-    background-image: url("..//images/run.jpg");
-}
+.run-buddy { background-image: url("..//images/run.jpg"); }
 
-.led-wall {
-    background-image: url("..//images/ledwall.jpg");
-}
+.led-wall { background-image: url("..//images/ledwall.jpg"); }
 
-.react-calc {
-    background-image: url("..//images/calculator.jpg");
-}
+.react-calc { background-image: url("..//images/calculator.jpg"); }
 
-.pastel-puzzles {
-    background-image: url("..//images/pastel.jpg");
-}
+.pastel-puzzles { background-image: url("..//images/pastel.jpg"); }
 
 .surf-report { background-image: url("..//images/wave.jpg"); }
 
 /* end portfolio project images */
 
-@media screen and (max-width: 980px) {
+/*start media queries*/
 
+ /* this will be applied on any screen smaller than 980px */
+ 
+@media screen and (max-width: 980px) {
+    span { border-bottom: 2px solid;
+        padding-bottom: 0; }
+    nav { padding-bottom: 5px; }
+    .image-flex p { padding: 11px;}
+    .image-flex img { margin: 0px; }
+    h2 { font-size: 41px; }
 }
+/* this will be applied on any screen smaller than 768px */
 
 @media screen and (max-width: 768px) {
     .image-flex { flex-direction: column; } 
-
-    .image-flex > img { width: 20%; } 
-
+    .image-flex > img { width: 20%; }
+    .hero-banner h2 { font-size: 1.5rem;}
+    span { border-bottom: 2px solid;
+        padding-bottom: 0; } 
+    nav { padding-bottom: 3px;}
+    h2 { font-size: 30px; }
 }
+/* this will be applied on any screen smaller than 575px */
 
 @media screen and (max-width: 575px) {
     .page-section { flex-wrap: nowrap; }
@@ -272,4 +267,12 @@ flex: 0 0 70%;
         max-width: 40%;}
     .grid-item div { line-height: normal; }
     .grid-item { grid-column: span 8;}
+    header h1 { padding: 5px;}
+    nav a { font-size: 1rem;}
+    .hero-banner h2 { font-size: 1rem;}
+    span { border-bottom: 2px solid;
+    padding-bottom: 0; }
+    nav { padding-bottom: 5px; }
+    h2 { font-size: 22px; }
 }
+/*end media queries*/
